assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');

@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');

html{
    background-color: #f5f5f5;
}

.style{
    margin: 0 auto;
}


body{ 
    max-width:1160px ;
    box-sizing: border-box;
    background-color: #ffffff;
}

/*issu 1 */

h1{
    display: flex;
    justify-content: center;

    font-family:"lato", sans-serif;
    font-size: 2.5em;
    margin-bottom:0;
}

h2 {
    display: flex;
    justify-content: center;

    font-family:"lato", sans-serif;
    font-size:1.4em;
    margin-block:0;
}

header{
    background-color: #17abb3;
    color: #ffffff;  
}

a{
    text-decoration: none;
    color: #ffffff;
}


img{
    width:120px;
    border-radius:50%;
    border:4px solid #ffffff;
    cursor:zoom-in;
}

.photo-profil{
    display:flex;
    width:25%;
    justify-content: center;
    align-self: center;
    padding: 15px;
}

.flex-header{
    display: flex;
    justify-content: space-around;
}

.contact{
    display: flex;
    flex-direction: column;
    width:70%;
    justify-content: center;
    padding-bottom:15px;
}

.grid-contact{
    display: grid;
    grid-template-columns: repeat(2, auto);
    grid-template-rows: repeat(2, 35px);
    justify-items: start;
    align-items: center;
    justify-content: center;
    gap: 0 30px;

    font-family:"raleway", sans-serif;
    font-size:0.8em;
    font-weight: 300;
}

.icon-pad-top{
    padding-top: 20px;
}
.icon-pad{
    padding-right:5px;
}

/*issu3 sidebar*/

h3{
    font-family: "lato", sans-serif;
    color: #17abb3;
    font-weight: 500;
    font-size: 1.3em;
    border-bottom: 1px solid #e3e3e3;
    padding-bottom:10px;
}

.background-color{
    
    width:250px;
    background-color: #f0f0f0;
    padding:30px;
}
.stars{
    color: #17abb3;
    font-size:0.7em;
}
.flex-sidebar{
    display: flex;
    justify-content: space-between;
    margin-bottom: 8px;
}

.font-style{
    font-family:"raleway", sans-serif;
    font-weight: 700;
    font-size: 0.9em;
}
.lang{
    display: flex;
    justify-content: space-between;
    margin-bottom: 8px;
}
.font-style-lang{
    font-family:"raleway", sans-serif;
    font-size:1em;
    font-weight: 450;
}
.hobby-list{
    display: flex;
    flex-direction: column;
    
}
ul{
    list-style: square ;
    margin-left: 20px;
    padding:0px;
}

li{
    margin-bottom:5px;
    font-family:"raleway", sans-serif;
    font-size:1em;
    font-weight: 450;
}

li::marker{
    color: #17abb3;
    font-size:1.2em;

}

/*issu4 Maincontent*/

.flex-maincontent{
    display: flex;
}

.flex-main{
    display: flex;
    flex-direction: column;

    font-weight: 450;
}

.flex{
    display: flex;
    flex-direction: column;
    margin:30px 40px 0 40px;

    font-family: "raleway", sans-serif;
    font-size: 1em;
}

.indent{
    text-indent: 5mm;
    margin:0
    
}
.flex-formation{
    display: flex;
    justify-content: space-between;
}

.no-space{
    margin:0
}

.formation-item{
    margin-bottom:15px;
    
}

.hover{
    background-color: #ffffff;

}

.hover:hover{
    background-color: #e3e3e3;
    border-left:4px solid #17abb3;
    padding:10px;
}
.formation-title{
    font-weight:600;
}
.element-year{
    color: #17abb3;
}
.element-style{
    font-style:italic;
    font-size: 0.8em;
}

/*issu5 footer*/

.social-item{
    display: flex;
    justify-content: center;
    gap:10px;

    color: #ffffff;
    font-size:1.3em;

}

.update{
    display: flex;
    justify-content: center;
    
}

footer{
    background-color: #17abb3;
}
 
small{
  
    margin: 10px;
    font-family: 'Raleway';
    font-style: italic;
    font-size: 0.6em;
    font-weight: 300;
    color: #ffffff;
    
}

.icon-style{
    margin-top: 15px;
}

.hover-opacity{
    opacity: 1;
}

.hover-opacity:hover{
    opacity: 0.4;
}

